--- a/css/PixelPainter.css
+++ b/css/PixelPainter.css
@@ -47,11 +47,9 @@ table, tr, td {
   margin-top: -435px;
   width: 400px;
   height: 437px;
-  background-color: green;
 }
 
-.grid {
-  height: 10px;
-  width: 10px;
-  border: 1px solid black;
+#grid {
+  height: 500px;
 }
+
